tests/negative/unknown_struct_initializer.c
struct Missing value = { 1 };
int main(void) { return 0; }
